--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ button{
     font-size: 20px;
     border-radius: 10px;
     color: white;
-    background-color: crimson;
+    background-color: green;
     font-weight: bold;
     font-family: cursive;
 }
