--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ label{
 
 button{
     padding: 20px;
-    border: 4px solid crimson;
+    border: 4px solid green;
     font-size: 20px;
     border-radius: 10px;
     color: white;
